<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PUSHTech&#8482; Chat</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_newChat">New Chat</string>
    <string name="menu_new_group">New group</string>
    <string name="menu_msg_center">Message center</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_chat_list">ChatList</string>

    <!-- Registration -->
    <string name="registering_blank_fields_warning_toast">All fields are mandatory, so you must fill in all of them to sign up.</string>
    <string name="registering_error_warning_toast">Error registering user</string>
    <string name="registering_secret_mismatch_warning_toast">Validation Secret Mismatch</string>
    <string name="registering_error_validating_secret_warning_toast">Error validating secret</string>
    <string name="sign_up_message">Please, verify your phone number before using PUSHTech&#8482; Chat</string>
    <string name="label_country">Select your country</string>
    <string name="label_phone_number">Mobile number</string>
    <string name="enter_phone_number_hint">Please, enter your phone</string>
    <string name="label_user_name">Your name</string>
    <string name="enter_name_hint">Please, enter your name</string>
    <string name="label_next">NEXT</string>
    <!-- Registration Verification -->
    <string name="message_verification">Please type verification code you\'ve received by SMS</string>
    <string name="verification_code">Verification code</string>
    <string name="label_finish">FINISH</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_contacts">Contacts</string>

    <!-- Contacts -->
    <string name="contacts_syncingContacts_warning_toast">We are syncing your contacts, please wait for a bit.</string>
    <string name="contacts_syncingContacts_error_warning_toast">Error syncing your contacts with server</string>
    <string name="contacts_createChat_error_warning_toast">Error creating chat</string>
    <string name="contacts_none_contact_available">None of your contacts are using this app. Do you want to invite some?</string>
    <string name="avatar">Avatar</string>
    <string name="title_chat_list">Chats</string>
    <string name="title_chat_detail">Chat Detail</string>

    <string name="message_group_name">Group name</string>
    <string name="button_create_group">Create group</string>
    <string name="message_select_contacts">Select group members</string>


    <!-- Chat Detail -->
    <string name="chat_detail_syncingMessages_warning_error">Error retrieving messages from server</string>
    <string name="chat_user_is_typing">is typing...</string>
    <string name="header_conversation_view_text">Show more messages</string>

    <string name="view_image">View image</string>
    <string name="view_video">View video</string>
    <string name="view_location">View location</string>


    <string name="menu_picture_from_camera">Image from camera</string>
    <string name="menu_video_from_camera">Video from camera</string>
    <string name="menu_from_gallery">From gallery</string>
    <string name="menu_picture_from_gallery">Image from gallery</string>
    <string name="menu_video_from_gallery">Video from gallery</string>
    <string name="menu_location">Location</string>
    <string name="menu_contact">Contact</string>

    <string name="menu_group_info">Group info</string>
    <string name="menu_invite_member">Add member</string>
    <string name="menu_leave_group">Leave group</string>

    <!-- CHat delete-->
    <string name="context_menu_delete_chat">Chat with name: %s is being deleted</string>
    <string name="context_menu_delete_succes_chat">Chat with name : %s deleted</string>
    <string name="context_menu_delete_error_chat">Error deleting chat with name: %s</string>

    <!-- Settings Activity-->
    <string name="label_log_out">LOG OUT</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="profile_photo">Profile photo</string>
    <string name="user_info">User info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_photo">Delete photo</string>

    <!-- Notifications -->
    <string name="notif_new_message_title">Message from </string>
    <string name="notif_group_invite_title">New group </string>
    <string name="notif_group_deleted_title">Group deleted </string>
    <string name="notif_group_deleted_body_1">Group </string>
    <string name="notif_group_deleted_body_2"> has been deleted </string>
    <string name="notif_group_left_title">Group left </string>
    <string name="notif_group_left_body_1">Your friend </string>
    <string name="notif_group_left_body_2"> has left the group </string>
    <string name="notif_group_invite_body"> has invited you to the group </string>
    <string name="notif_group_join_empty_user">Someone has joined the group </string>
    <string name="notif_group_join_title">Your friend has joined a group </string>
    <string name="notif_group_join_body_2"> has joined the group </string>
    <string name="notif_group_invite_no_hostname_body">You\'ve been invited to the group </string>

    <!-- Message Center -->
    <string name="message_center_title">Message Center</string>
    <string name="label_delete">Delete</string>


</resources>
