<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_newChat"
        android:icon="@drawable/ic_action_new_chat"
        app:showAsAction="always"
        android:title="@string/action_newChat" />

    <item
        android:id="@+id/menu_new_group"
        android:icon="@drawable/ic_action_new_group"
        app:showAsAction="always|withText"
        android:title="@string/menu_new_group" />
    <item
        android:id="@+id/menu_msg_center"
        android:icon="@drawable/ic_action_msg_center"
        app:showAsAction="always|withText"
        android:title="@string/menu_msg_center" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="always|withText"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/attach_menu"
        android:icon="@drawable/ic_action_attach"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_photo_camera"
                android:icon="@drawable/ic_action_photo"
                android:title="@string/menu_picture_from_camera"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_video_camera"
                android:title="@string/menu_video_from_camera"
                android:icon="@drawable/ic_action_video"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_gallery"
                android:icon="@drawable/ic_action_gallery"
                android:title="@string/menu_from_gallery"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_contact"
                android:icon="@drawable/ic_add_contact"
                app:showAsAction="always|withText"
                android:title="@string/menu_contact" />

            <item
                android:id="@+id/menu_location"
                android:icon="@drawable/ic_action_location"
                app:showAsAction="always|withText"
                android:title="@string/menu_location" />

        </menu>

    </item>

    <item
        android:id="@+id/group_overflow_menu"
        android:icon="@drawable/ic_action_overflow"
        app:showAsAction="always"
        android:visible="false">

        <menu>

            <item
                android:id="@+id/menu_group_info"
                android:title="@string/menu_group_info" />

            <item
                android:id="@+id/menu_leave_group"
                android:title="@string/menu_leave_group" />

            <item
                android:id="@+id/menu_invite_member"
                android:title="@string/menu_invite_member" />

        </menu>

    </item>

</menu>